--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,9 @@ jobs:
       
     - name: Build
       run: npm run build
-      
+      env:
+        NODE_ENV: production
+        
     - name: Setup Pages
       uses: actions/configure-pages@v4
       
